# Progalap_01

./: CMakeLists.txt  course-info.yaml  course-remote-info.yaml
cmake/: googletest-download.cmake
lesson1/: lesson-info.yaml  lesson-remote-info.yaml  tools.cpp
lesson1/abece1/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/abece2/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/alma/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/atlag/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/auto/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/beolvaso/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/betu/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/cseresznye/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/eletkor/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/forma1/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/gyozelem/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml
lesson1/harcrendszer/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/hatvanyozas/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/honap/: CMakeLists.txt  task-info.yaml  (+2 more)
lesson1/ora/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.html
lesson1/ora/src/: ora.c
lesson1/ora/test/: test.cpp
test-framework/: CMakeCache.txt  CMakeLists.txt
(+100 files in other folders)
